# hiremetrics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  env.example  package.json
.cursor/rules/: documents.mdc  general-rules.mdc
.github/workflows/: backend-pytest.yml  code-formatting.yml  frontend-lint.yml
backend/: .coveragerc  .env.test  Dockerfile  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
backend/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/middleware/: __init__.py  logging.py  security.py
backend/app/routers/: __init__.py  auth.py  cache.py  companies.py  contact.py  dashboard.py  public.py  publishers.py  reports.py  skills.py
backend/app/services/: __init__.py  email_service.py  query_service.py  token_service.py
backend/app/utils/: auth.py  auth_utils.py  cache.py  query_builder.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/routers/: __init__.py  test_companies.py  test_template.py
backend/tests/utils/: test_query_builder.py
containers/warehouse/: 001_create_user_table.sql  002_create_users_table.sql  003_create_job_dashboard_base_table.sql  004_create_job_skills_table.sql  005_add_email_verification_and_profile_fields.sql  006_add_password_reset_fields.sql  (+4 more)
etl/: Dockerfile  etl_flow.py  logging_config.py  pyproject.toml  requirements.txt  test_motherduck_connection.py
etl/dbt/: .user.yml  dbt_project.yml  profiles.yml
etl/dbt/models/dashboard/: job_dashboard_base.sql  job_dashboard_base.yml  job_skills.sql  job_skills_exploded.sql
etl/dbt/models/marts/: dim_employer.sql  dim_employer.yml  dim_location.sql  dim_location.yml  dim_publisher.sql  fct_jobs_post.sql  fct_jobs_post.yml
etl/dbt/models/staging/: sources.yml  stg_jobs.sql
etl/scripts/: copy_job_dashboard_base.py
etl/scripts/sql_duckdb/: 1a_analyze_duplicates.sql  2b_remove_duplicate_jobs.sql  3_update_job_publishers.sql
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
(+84 files in other folders)
