[project]
name = "etl"
version = "0.1.0"
description = "ETL pipeline and data transformation service for HireMetrics using dbt, DuckDB and Prefect"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HireMetrics Team"}
]
keywords = ["etl", "data-pipeline", "dbt", "duckdb", "prefect", "data-transformation", "analytics"]

dependencies = [
    "black==25.9.0",
    "dbt-core==1.7.4",
    "dbt-duckdb==1.7.1",
    "duckdb==1.3.2",
    "isort==6.1.0",
    "langchain==0.3.25",
    "langchain-openai==0.3.19",
    "pandas==2.1.4",
    "prefect==3.4.4",
    "protobuf==4.25.3",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "sqlalchemy==2.0.30",
    "tqdm==4.65.0",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true